Fixes bugs on image and article size, aligns footer links horizontally

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,12 @@ body {
   grid-row-end: span 1;
   grid-column-start: 3;
   grid-column-end: 7;
-  } 
+  }
+
+img {
+  max-width: 100%;
+  max-height: 100%1;
+}
 
 .blog-left-side-bar {
   grid-row-start:2 ;
@@ -60,7 +65,8 @@ body {
 .article {
   grid-row-start:3 ;
   grid-row-end: span 1;
-  grid-column: 1, span 6;
+  grid-column-start: 3;
+  grid-column-end: 7;
   background-color: rgb(216, 190, 188);
 }
 
@@ -72,7 +78,7 @@ h2 {
 
 
 .footer {
-  grid-row-start:23 ;
+  grid-row-start: 4;
   grid-row-end: span 1;
   grid-column-start: 1;
   grid-column-end: 7;
